// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav>
    <a
      href="/"
    >
      Jobly
    </a>
    <ul>
      <li>
        <a
          href="/companies"
        >
          Companies
        </a>
      </li>
      <li>
        <a
          href="/jobs"
        >
          Jobs
        </a>
      </li>
      <li>
        <a
          href="/profile"
        >
          Profile
        </a>
      </li>
      <li>
        <a
          aria-current="page"
          class="active"
          href="/"
        >
          Log Out testfirst
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav>
    <a
      href="/"
    >
      Jobly
    </a>
    <ul>
      <li>
        <a
          href="/login"
        >
          Log In
        </a>
      </li>
      <li>
        <a
          href="/signup"
        >
          Sign Up
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
